[package]
name = "memory"
version = "0.1.0"
authors = ["mgostIH"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
log = "0.4.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["memoryapi","processthreadsapi","winnt","tlhelp32","handleapi","wow64apiset","sysinfoapi"] }

[target.'cfg(linux)'.dependencies]
libc = "0.2.62"